--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8" />
   <title>Crunchyroll Premium BD Shop</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <!-- Design Style -->
   <style>
     body {
       margin: 0;
@@ -50,9 +48,20 @@
     button {
       cursor: pointer;
     }
-    .mega-btn {
-      background: green;
+    .buy-now-btn {
+      background: #007bff;
       color: white;
+      padding: 12px 20px;
+      font-size: 18px;
+      border: none;
+      border-radius: 8px;
+      display: block;
+      width: 200px;
+      margin: 20px auto;
+      transition: background-color 0.3s ease;
+    }
+    .buy-now-btn:hover {
+      background: #0056b3;
     }
     .package-btn {
       background: #0f7dc8;
@@ -67,14 +76,23 @@
       display: flex;
       justify-content: space-between;
       margin-top: 16px;
+      gap: 10px;
     }
     .orange {
       background: orange;
       color: black;
+      flex: 1;
+      border-radius: 8px;
+      padding: 12px 0;
+      font-weight: bold;
     }
     .green {
       background: green;
       color: white;
+      flex: 1;
+      border-radius: 8px;
+      padding: 12px 0;
+      font-weight: bold;
     }
     .error {
       color: #ff4d4d;
@@ -99,21 +117,13 @@
 
 <!-- Main Page -->
 <div id="mainPage" class="page active">
-  <img
-    src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg"
-    class="banner"
-  />
-  <img
-    src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg"
-    class="avatar"
-  />
+  <img src="https://i.postimg.cc/KvBrVgmR/20250625-061716.jpg" class="banner" />
+  <img src="https://i.postimg.cc/PxJQF3qj/89fcdebedfdcf2bf3a00a49d75833c3a-1.jpg" class="avatar" />
   <h2 style="text-align:center;">Welcome to Crunchyroll Premium BD Shop</h2>
-  <button class="mega-btn" onclick="showPage('packagePage')">💥 BUY NOW</button>
-  <p style="margin-top:20px;">
-    <strong>Total Users:</strong>
-    <span id="userCount">0</span> |
-    <strong>Total Orders:</strong>
-    <span id="orderCount">0</span>
+  <button class="buy-now-btn" onclick="showPage('packagePage')">BUY NOW</button>
+  <p style="margin-top:20px; text-align:center;">
+    <strong>Total Users:</strong> <span id="userCount">0</span> |
+    <strong>Total Orders:</strong> <span id="orderCount">0</span>
   </p>
 </div>
 
@@ -122,100 +132,25 @@
   <h2>📦 প্যাকেজ সিলেকশন</h2>
   <!-- Shared -->
   <h3>📤 Shared Profile</h3>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Shared Profile', '1 Month', 100)"
-  >
-    1 Month – 100 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Shared Profile', '2 Months', 200)"
-  >
-    2 Months – 200 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Shared Profile', '3 Months', 300)"
-  >
-    3 Months – 300 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Shared Profile', '6 Months', 600)"
-  >
-    6 Months – 600 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Shared Profile', '8 Months', 840)"
-  >
-    8 Months – 840 TK
-  </button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile', '1 Month', 100)">1 Month – 100 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile', '2 Months', 200)">2 Months – 200 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile', '3 Months', 300)">3 Months – 300 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile', '6 Months', 600)">6 Months – 600 TK</button>
+  <button class="package-btn" onclick="selectPackage('Shared Profile', '8 Months', 840)">8 Months – 840 TK</button>
   <!-- Personal -->
   <h3>👤 Personal Profile</h3>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Personal Profile', '1 Month', 240)"
-  >
-    1 Month – 240 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Personal Profile', '2 Months', 480)"
-  >
-    2 Months – 480 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Personal Profile', '3 Months', 720)"
-  >
-    3 Months – 720 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Personal Profile', '6 Months', 1440)"
-  >
-    6 Months – 1440 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Personal Profile', '8 Months', 1800)"
-  >
-    8 Months – 1800 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Personal Profile', '12 Months', 2760)"
-  >
-    12 Months – 2760 TK
-  </button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '1 Month', 240)">1 Month – 240 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '2 Months', 480)">2 Months – 480 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '3 Months', 720)">3 Months – 720 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '6 Months', 1440)">6 Months – 1440 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '8 Months', 1800)">8 Months – 1800 TK</button>
+  <button class="package-btn" onclick="selectPackage('Personal Profile', '12 Months', 2760)">12 Months – 2760 TK</button>
   <!-- Primary -->
   <h3>👑 Primary Account</h3>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Primary Account', '1 Month', 650)"
-  >
-    1 Month – 650 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Primary Account', '2 Months', 1300)"
-  >
-    2 Months – 1300 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Primary Account', '3 Months', 1950)"
-  >
-    3 Months – 1950 TK
-  </button>
-  <button
-    class="package-btn"
-    onclick="selectPackage('Primary Account', '6 Months', 3600)"
-  >
-    6 Months – 3600 TK
-  </button>
+  <button class="package-btn" onclick="selectPackage('Primary Account', '1 Month', 650)">1 Month – 650 TK</button>
+  <button class="package-btn" onclick="selectPackage('Primary Account', '2 Months', 1300)">2 Months – 1300 TK</button>
+  <button class="package-btn" onclick="selectPackage('Primary Account', '3 Months', 1950)">3 Months – 1950 TK</button>
+  <button class="package-btn" onclick="selectPackage('Primary Account', '6 Months', 3600)">6 Months – 3600 TK</button>
 
   <div class="action-btns">
     <button class="orange" onclick="goToCheckout()">🛒 Add To Cart</button>
@@ -242,14 +177,9 @@
       <option value="Rocket">Rocket</option>
     </select>
     <div id="payNumber" class="copy-box"></div>
-    <p>
-      অবশ্যই সেন্ড মানি করতে হবে এবং নির্দিষ্ট পরিমাণ পাঠাবেন। কম পাঠালে
-      রিফান্ড হবে না।
-    </p>
+    <p>অবশ্যই সেন্ড মানি করতে হবে এবং নির্দিষ্ট পরিমাণ পাঠাবেন। কম পাঠালে রিফান্ড হবে না।</p>
     <button class="green" onclick="confirmOrder()">✅ Order Confirm</button>
-    <button class="orange" onclick="showPage('packagePage')">
-      ⬅️ Back To Packages
-    </button>
+    <button class="orange" onclick="showPage('packagePage')">⬅️ Back To Packages</button>
   </div>
   <p id="coError" class="error"></p>
 </div>
@@ -257,6 +187,122 @@
 </div>
 
 <script>
-  // --- Configurations ---
+  // Firebase configuration
   const firebaseConfig = {
-    apiKey: 'AIzaSyDDvK
+    apiKey: 'AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4',
+    authDomain: 'crunchyrollpremiumbd-shop.firebaseapp.com',
+    projectId: 'crunchyrollpremiumbd-shop',
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+
+  // EmailJS configuration
+  const emailjsConfig = {
+    service: 'service_z1714kq',
+    adminTpl: 'template_hp66tqp',
+    custTpl: 'template_1z1lhlf',
+    publicKey: 'SsUmUorUm-BZG8LBY',
+  };
+  emailjs.init(emailjsConfig.publicKey);
+
+  // Show page function
+  function showPage(id) {
+    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
+    document.getElementById(id).classList.add('active');
+  }
+
+  // Update user and order counts realtime
+  function startListeners() {
+    db.collection('users').onSnapshot(snap => {
+      document.getElementById('userCount').textContent = snap.size;
+    });
+    db.collection('orders').onSnapshot(snap => {
+      document.getElementById('orderCount').textContent = snap.size;
+    });
+  }
+  startListeners();
+
+  // Package selection
+  let selectedPkg = null;
+  function selectPackage(profile, duration, price) {
+    selectedPkg = { profile, duration, price };
+    document.getElementById('pkgError').textContent = '';
+    alert(`✅ '${profile}' (${duration}) – ${price} TK সিলেক্ট হয়েছে`);
+  }
+
+  // Show payment number based on payment method
+  function updatePayNumber() {
+    const m = document.getElementById('paymentMethod').value;
+    let num = '';
+    if (m === 'Bkash') num = '01740433733';
+    else if (m === 'Nagad' || m === 'Rocket') num = '01603599843';
+    else num = '';
+    document.getElementById('payNumber').innerHTML = num
+      ? `${m} নম্বর: <strong>${num}</strong> <button onclick="copyToClipboard('${num}')">📋 কপি</button>`
+      : '';
+  }
+
+  function copyToClipboard(text) {
+    navigator.clipboard.writeText(text).then(() => {
+      alert('কপি করা হয়েছে: ' + text);
+    });
+  }
+
+  // Go to checkout page
+  function goToCheckout() {
+    if (!selectedPkg) {
+      document.getElementById('pkgError').textContent = '⚠️ প্যাকেজ সিলেক্ট করুন';
+      return;
+    }
+    document.getElementById('selectedInfo').innerHTML = `
+      <p>📦 আপনি নিয়েছেন: <strong>${selectedPkg.profile}</strong></p>
+      <p>🕒 মেয়াদ: <strong>${selectedPkg.duration}</strong></p>
+      <p>💰 মূল্য: <strong>${selectedPkg.price} TK</strong></p>
+    `;
+    showPage('checkoutPage');
+  }
+
+  // Confirm order and save to Firestore + send emails via EmailJS
+  async function confirmOrder() {
+    const name = document.getElementById('coName').value.trim();
+    const email = document.getElementById('coEmail').value.trim();
+    const addr = document.getElementById('coAddress').value.trim();
+    const mobile = document.getElementById('coMobile').value.trim();
+    const payNo = document.getElementById('coPaymentNumber').value.trim();
+    const trans = document.getElementById('coTransID').value.trim();
+    const pm = document.getElementById('paymentMethod').value;
+    const coErr = document.getElementById('coError');
+    coErr.textContent = '';
+
+    if (!name || !email || !addr || !mobile || !payNo || !trans || !pm) {
+      coErr.textContent = '⚠️ সব তথ্য ভরুন';
+      return;
+    }
+
+    try {
+      const data = {
+        ...selectedPkg,
+        name,
+        email,
+        addr,
+        mobile,
+        payNo,
+        trans,
+        pm,
+        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+      };
+      await db.collection('orders').add(data);
+
+      // Send emails
+      emailjs.send(emailjsConfig.service, emailjsConfig.custTpl, data);
+      emailjs.send(emailjsConfig.service, emailjsConfig.adminTpl, data);
+
+      alert('✅ অর্ডার সফল হয়েছে। কাস্টমার ও অ্যাডমিনে ইমেইল পাঠানো হয়েছে।');
+      showPage('mainPage');
+    } catch (err) {
+      alert('❌ অর্ডার ব্যর্থ: ' + err.message);
+    }
+  }
+</script>
+</body>
+</html>
